# sakugahd

./: .tmuxinator.yml  Cargo.toml  README.md  TODO  TODO.md  build.sh  schema.sql  test.sql
client/: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  vite.config.ts
client/.sass-cache/7f00e0ab3143afd4950fe520b8630548a638314e/: anime.scssc  animeList.scssc  manga.scssc  readingProgressbar.scssc
client/.sass-cache/8a5e985be6be6b459bdaafbb8c68befc89ecce5b/: index.scssc
client/.sass-cache/8c5058c59a5302576181b2e0193ff044d1710761/: anime.scssc  home.scssc  manga.scssc  manga_read.scssc  manga_view.scssc  watch.scssc
client/public/css/components/: animeList.css  readingProgressbar.css
client/public/css/pages/: anime.css  home.css  manga.css  manga_read.css  manga_view.css  watch.css
client/src/: App.css  App.tsx  app.rs  index.css  main.rs  main.tsx  types.ts
client/src/components/: anime.tsx  animeList.tsx  ending.tsx  episode.tsx  manga.tsx  movie.tsx  opening.tsx  readingProgressbar.tsx
client/src/components/anime/: index.css  index.tsx
client/src/components/animeList/: index.css  index.tsx
client/src/components/show/: index.css  index.tsx
client/src/components/shows/: index.css  index.tsx
client/src/css/: index.css  index.css.map
client/src/css/components/: anime.css  anime.css.map  animeList.css  animeList.css.map  manga.css  manga.css.map  navbar.css  navbar.css.map  readingProgressbar.css  readingProgressbar.css.map
client/src/pages/: anime_page.tsx  anime_view_page.tsx  genre_page.tsx  genres_page.tsx  home_page.tsx  manga_page.tsx  manga_read_page.tsx  manga_view_page.tsx  studio_page.tsx  studios_page.tsx  watch_page.tsx
client/src/sass/: _vars.scss  index.scss
client/src/scss/: index.scss
common/: Cargo.toml
common/src/: enums.rs  schema.rs
common/src/models/: anime.rs  anime_genre.rs  anime_studio.rs  chapter.rs  ending.rs  episode.rs  genre.rs  manga.rs  manga_genre.rs  manga_theme.rs  mod.rs  movie.rs  opening.rs  page.rs  show.rs  show_genre.rs  show_studio.rs  studio.rs  theme.rs
server/: .env.example  Cargo.toml  Rocket.toml  api.txt  diesel.toml  schema.sql
server/migrations/2023-07-13-110559_shows/: down.sql  up.sql
server/migrations/2023-07-13-110620_studios/: up.sql
server/migrations/2023-07-13-110627_shows_studios/: down.sql  up.sql
server/migrations/2023-07-13-110634_genres/: up.sql
server/migrations/2023-07-13-110639_shows_genres/: down.sql  up.sql
server/migrations/2023-07-13-110645_episodes/: up.sql
server/migrations/2023-07-13-110652_movies/: up.sql
server/migrations/2023-07-13-110658_openings/: down.sql  up.sql
server/migrations/2023-07-13-110705_endings/: down.sql  up.sql
server/migrations/2023-07-23-205045_init/: down.sql  up.sql
server/src/: load_shows.rs  loader.rs  main.rs  models.rs  schema.rs  thumbnail.rs
server/src/loaders/: anime.rs  manga.rs
server/src/models/: ending.rs  episode.rs  genre.rs  mod.rs  movie.rs  opening.rs  show.rs  show_genre.rs  show_studio.rs  studio.rs
server/src/routes/: anime.rs  endings.rs  episodes.rs  genres.rs  manga.rs  mod.rs  movies.rs  openings.rs  show.rs  shows.rs  studios.rs  thumbnail.rs  video.rs
(+33 files in other folders)
