[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.3.1"
serde = {version = "1.0.183", features = ["derive"]}
wasm-bindgen-futures = "0.4.37"
yew = { version="0.20", features=["csr"] }
common = { path="../common" }
