[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
diesel = { version = "2.1.0", features = ["postgres"] }
serde = "1.0.171"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
