[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
rocket_seek_stream = { git = "https://github.com/rydz/rocket_seek_stream" }
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
nanoid = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.171"
dirs = "5.0.1"
log = "0.4.19"
env_logger = "0.10"
common = { path="../common" }
urlencoding = "2.1.2"
